--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <input type="text" placeholder="">
+            <input type="text" placeholder="0" id="output-screen">
             <button onclick="Clear()">cl</button>
             <button onclick="del()">DEL</button>
             <button onclick="display('%')">%</button>
@@ -32,6 +32,6 @@
             <button onclick="Calculate()" class="equal">=</button>
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
